--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ECE 4501/6501, CS 6501 - Spring 2023</title>
+<title>ECE 4501/6501, CS 6501 - Spring 2024</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link rel="icon" type="image/ico" href="images/favico.ico">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
@@ -21,7 +21,7 @@
 	<tr>
 	<td>
 	<p align="left" style="font-size:22px">
-	   <b><br> ECE 4501/6501, CS 6501 - Spring 2023 <br>
+	   <b><br> ECE 4501/6501, CS 6501 - Spring 2024 <br>
 	   Real-time Embedded Systems<br></b>
 	</p>
 	<p align="left" style="font-size:15px;color:red">
@@ -97,10 +97,10 @@
 	</div>
 	<div id="rightColumn2">
 	    <!-- <strong><a href="./ece6501_syllabus.pdf" target="_blank">Full Syllabus</a><br>-->
-		<a href="https://collab.its.virginia.edu/portal/site/d52dc83a-b6d2-434e-b45c-fa6d777ca4a5" target="_blank">UVA Collab Site</a><br>
-		<a href="https://piazza.com/virginia/spring2023/ece45016501cs6501/home" target="_blank">Piazza</a><br>
+		<a href="https://canvas.its.virginia.edu/courses/106115" target="_blank">UVA Canvas Site</a><br>
+		<a href="https://piazza.com/virginia/spring2024/ece45016501cs6501/home" target="_blank">Piazza</a><br>
 		<a href="https://github.com/UVA-embedded-systems" target="_blank">GitHub Classroom</a><br><br>
-		<a href="https://registrar.virginia.edu/calendar/academic/2022-2023" target="_blank">UVA Academic Calendar</a></strong><br>
+		<a href="https://registrar.virginia.edu/calendar/academic/2023-2024" target="_blank">UVA Academic Calendar</a></strong><br>
 	</div>
 	<div id="rightbottomColumn">
 	<strong>Time: </strong>Mon/Wed 2:00 - 3:15 PM<br>
@@ -112,26 +112,26 @@
     Office: 259 Olsson Hall (Link Lab)<br>
     <br>
     <b>Instructor Office Hours:</b> <br>
-    Mondays&ensp;3:15-4:15 PM<br> 
+    Fridays&ensp;10-11 AM<br> 
     In person in Olsson 259 and via Zoom<br>
     Other times by appointment<br>
     <br>
     
 	
 	<strong>Teaching Assistants:</strong> <br> 
-	Julia Rudy<br>
-	Yimin Gao<br>
-	Xugui Zhou<br>
+	Xugui Zhou <br>
+	Keshara Weerasinghe <br>
+	Kidus Fasil <br>
 	<br>
     <strong>TA Office Hours: </strong> <br>
     In person in Rice 240 and via Zoom<br>
     <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
-	<tr><td>Mondays&ensp;</td><td>4-5 PM&ensp;</td><tr>
-	<tr><td>Tuesdays&ensp;</td><td>3-4 PM&ensp;</td><tr>
-	<tr><td>Wednesdays&ensp;</td><td>4-5 PM&ensp;</td><tr>
-	<tr><td>Thursdays&ensp;</td><td>4-5 PM&ensp;</td><tr>
-	<tr><td>Fridays&ensp;</td><td>11-12 AM&ensp;</td><tr>
+	<tr><td>Mondays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Tuesdays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Wednesdays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Thursdays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Fridays&ensp;</td><td>TBD&ensp;</td><tr>
 	
 	</tbody>
 	</table>
