Posting TA office hours for ECE 6501

--- a/teaching/ece_6501/index.html
+++ b/teaching/ece_6501/index.html
@@ -127,11 +127,12 @@
     In person in Rice 240 and via Zoom<br>
     <table border="0" cellpadding="0" cellspacing="0">
 	<tbody>
-	<tr><td>Mondays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Tuesdays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Wednesdays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Thursdays&ensp;</td><td>TBD&ensp;</td><tr>
-	<tr><td>Fridays&ensp;</td><td>TBD&ensp;</td><tr>
+	<tr><td>Mondays&ensp;</td><td>3:30-4:30pm&ensp;(Link Lab)</td><tr>
+	<tr><td>Tuesdays&ensp;</td><td>2:00-3:00pm&ensp;</td><tr>
+	<tr><td>Wednesdays&ensp;</td><td>11:00-12:00pm&ensp;</td><tr>
+	<tr><td>Wednesdays&ensp;</td><td>1:00-2:00pm&ensp;</td><tr>
+	<tr><td>Thursdays&ensp;</td><td>2:00-3:00pm&ensp;</td><tr>
+	<tr><td>Fridays&ensp;</td><td>1:00-2:00pm&ensp;</td><tr>
 	
 	</tbody>
 	</table>
