Adding new papers

--- a/pub.html
+++ b/pub.html
@@ -26,6 +26,36 @@
 
 		    <tr valign="top">
 			<td>
+			<!--<a href="https://arxiv.org/pdf/2308.12789"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“Multimodal Transformers for Real-Time Surgical Activity Prediction” </font></b></b><br>
+			K. Weerasinghe, S. H. Roodabeh, K. Hutchinson, <u>H. Alemzadeh</u><br>
+			To appear in the <i>2024 IEEE International Conference on Robotics and Automation (ICRA)</i>, 2024. <b>(Acceptance Rate ~ 44.83%)</b> <br>   	
+			</p>
+			</td>
+		    </tr>
+		    
+		    <tr valign="top">
+			<td>
+			<!--<a href="https://arxiv.org/pdf/2308.12789"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“Real-Time Multimodal Cognitive Assistant for Emergency Medical  Services” </font></b></b><br>
+			K. Weerasinghe, S. Janapati, X. Ge, S. Kim, S. Iyer, J. Stankovic, <u>H. Alemzadeh</u><br>
+			To appear in the <i>9th ACM/IEEE Conference on Internet of Things Design and Implementation (IoTDI)</i>, 2024.</b> <br>   	
+			</p>
+			</td>
+		    </tr>
+		    
+		    <tr valign="top">
+			<td>
 			<a href="https://arxiv.org/pdf/2308.12789"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
 			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>
 			   -->
@@ -34,7 +64,7 @@
 			<p align="left">
 			<b><font color=#000000>“Robotic Scene Segmentation with Memory Network for Runtime Surgical Context Inference” </font></b></b><br>
 			Z. Li, I. Reyes, <u>H. Alemzadeh</u><br>
-			To appear in the <i>2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 2023. <b>(Acceptance Rate ~ 43.3%)</b> <br>   	
+			In the <i>2023 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</i>, 2023. <b>(Acceptance Rate ~ 43.3%)</b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -49,7 +79,7 @@
 			<p align="left">
 			<b><font color=#000000>“Evaluating Task Generalization of TCNs for Surgical Gesture and Motion Recognition using Kinematic Data” </font></b></b><br>
 			K. Hutchinson, I. Reyes, Z. Li, <u>H. Alemzadeh</u><br>
-			In the <i>IEEE Robotics and Automation Letters (RA-L)</i>, 2023. <b>(Impact Factor ~ 4.3)</b> <br>   	
+			In the <i>IEEE Robotics and Automation Letters (RA-L)</i>, 2023. <b>(Impact Factor ~ 4.3)</b>. <i>Selected for Presentation at ICRA 2024.</i><br>   	
 			</p>
 			</td>
 		    </tr>
