--- a/pub.html
+++ b/pub.html
@@ -24,6 +24,22 @@
 		<tbody>
 
 
+
+		    <tr valign="top">
+			<td>
+			<!--<a href="https://arxiv.org/pdf/2403.06705.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>(Acceptance Rate ~ 23.75%)
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“Strategic Resilience Evaluation of Neural Networks within Autonomous Vehicle Software” </font></b></b><br>
+			A. Schmedding, P. Schowitz, X. Zhou, Y. Lu, L. Yang, <u>H. Alemzadeh</u>, E. Smirni<br>
+			To appear in the <i>43rd International Conference on Computer Safety, Reliability and Security (SafeComp)</i>, 2024. <b></b> <br>   	
+			</p>
+			</td>
+		    </tr>
+		    
 		    <tr valign="top">
 			<td>
 			<a href="https://arxiv.org/pdf/2403.06705.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
