--- a/pub.html
+++ b/pub.html
@@ -27,8 +27,8 @@
 
 		    <tr valign="top">
 			<td>
-			<!--<a href="https://arxiv.org/pdf/2403.06705.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
-			<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>(Acceptance Rate ~ 23.75%)
+			<a href="./papers/SafeComp_2024.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>(Acceptance Rate ~ 23.75%)
 			   -->
 			</td>
 			<td>
