--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <td width="10"></td>
         <td colspan=3 text-align:right;>
          
-        	 I am an assistant professor in the department of <a href="http://www.ece.virginia.edu/">Electrical and Computer Engineering</a>, with 
-        	 a courtesy appointment in the department of <a href="http://www.cs.virginia.edu/">Computer Science</a> at
+        	 I am an Associate Professor in the Department of <a href="http://www.ece.virginia.edu/">Electrical and Computer Engineering</a>, with 
+        	 a courtesy appointment in the Department of <a href="http://www.cs.virginia.edu/">Computer Science</a> at
         	 the <a href="http://virginia.edu">University of Virginia</a>. I am also affiliated with the <a href="http://linklab.virginia.edu">LinkLab</a>, a multi-disciplinary research center for Cyber-Physical Systems (CPS).<br>
         	 
              <br>  My research interests are at the intersection of <b>computer systems dependability</b> and <b>data science</b>. <br>
