--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         	 the <a href="http://virginia.edu">University of Virginia</a>. I am also affiliated with the <a href="http://linklab.virginia.edu">LinkLab</a>, a multi-disciplinary research center for Cyber-Physical Systems (CPS).<br>
         	 
              <br>  My research interests are at the intersection of <b>computer systems dependability</b> and <b>data science</b>. <br>
-             I am particularly interested in data-driven resilience assessment and design of <b>embedded and cyber-physical systems</b>,       
-             with a focus on safety and security validation and monitoring in medical devices and systems, surgical robots, and autonomous systems. 
+             I am particularly interested in combined model and data-driven resilience assessment and design of <b>embedded and cyber-physical systems</b>,       
+             with a focus on <b>safety and security</b> validation and monitoring in medical devices and systems, surgical robots, and autonomous systems. 
              <br><br>  
              
         	 I am a recipient of the <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2146295&HistoricalAwards=false">NSF CAREER Award</a> in 2022 and the <a href="https://ieeexplore.ieee.org/document/8023104"> William C. Carter Ph.D. Dissertation Award in Dependability</a> in 2017.
