--- a/students.html
+++ b/students.html
@@ -26,7 +26,7 @@
 		<table border="0" cellspacing="0" cellpadding="5">
 		<tbody>
 
-		<tr valign="top">
+		<!--<tr valign="top">
 			<td colspan=2><b><font size="3" color=#000000>Postdoctoral Researchers</font></td>
 		</tr>
 		<tr>
@@ -36,7 +36,7 @@
 			</ul>
 			<br>
 			</td>
-		</tr>
+		</tr>-->
 		
 		<tr valign="top">
 			<td colspan=2><b><font size="3" color=#000000>Ph.D. Students</font></td>
@@ -45,17 +45,16 @@
 			<td></td>
 			<td><ul>
 			<li><a href="https://xueren-ge.github.io/" >Xueren Ge</a></li>
-			<li><a href="https://kch4fk.github.io" >Kay Hutchinson</a></li>
 			<li><a href="https://www.zongyuli.net" >Zongyu (Zoey) Li</a></li>
 			<li><a href="https://hamidrezaro.github.io" >Hamid Roodabeh</a></li>
 			<li><a href="https://keshara2032.github.io" >Keshara Weerasinghe</a></li>
-			<li><a href="https://xugui-zhou.github.io/">Xugui Zhou</a></li>	
+			<li><a href="" >Zhaomeng Zhang</a></li>			 
 			</ul>
 			<br>
 			</td>
 		</tr>
 	
-		<tr>
+		<!--<tr>
 		<td colspan=2><b><font size="3" color=#000000>Research Programmers</font></td>
 		</tr>    
 		<tr valign="top">
@@ -65,7 +64,7 @@
 			</ul>
 			<br>
 			</td>
-		</tr> 
+		</tr>-->
 			
 		<tr valign="top">
 			<td colspan=2><b><font size="3" color=#000000>Undergraduate Researchers</font></td>
@@ -73,9 +72,9 @@
 		<tr valign="top">
 		    <td></td>
 			<td><ul> 
-			<li>Saahith Janapati</li>
-			<li>Shaunak Tandon Sinha</li>
-			<li>Shrisha Yapalparvi</li>
+			<li>Tessa Heick</li>
+			<li>Abhishek Satpathy</li>
+			<li>Zachary Schrader</li>
 			</ul>
 			</td>
 		</tr>
@@ -83,18 +82,19 @@
 		<tr valign="top">
 			<td colspan=2><b><font size="3" color=#000000><br>Alumni</font></b></td>
 		</tr>
+		
 		<tr valign="top">
-			<td colspan=2><b>Graduate Students:</b></td>
-		</tr>			
-		<tr>
 			<td></td>
 			<td>
 			<ul>
-			<li>Mustafa Hotaki, M.Sc., 2020 =>&ensp;Counterpoint Consulting&ensp;</li>
-			<li>Mohammad Samin Yasar&ensp; => PhD @ UVA&ensp;</li>
-			<li>Bulbul Ahmed, M.Sc., 2019&ensp;=>&ensp;PhD @ UFlorida&ensp;</li>
-			<li>Yongming Qin&ensp; => PhD @ UVA&ensp;</li>
-			<li>Sile Shu, M.Sc., 2019&ensp;=>&ensp;Amazon&ensp;</li>
+			<li><a href="https://xugui-zhou.github.io/">Xugui Zhou</a>, Ph.D., 2024 =>&ensp;Assist. Prof. @ Louisiana State University&ensp;</li>	
+			<li><a href = "https://www.linkedin.com/in/maryam-bagheri-15623450/">Maryam Bagheri</a>, Postdoc, 2024 =>&ensp;Samsung Semiconductor&ensp;</li>
+			<li><a href="https://kch4fk.github.io">Kay Hutchinson</a>, Ph.D., 2023</li>
+			<li><a href="https://www.linkedin.com/in/mustafa-hotaki/">Mustafa Hotaki</a>, M.Sc., 2020 =>&ensp;Counterpoint Consulting&ensp;</li>
+			<li><a href="https://www.linkedin.com/in/yasarsamin/">Mohammad Samin Yasar</a>&ensp; => PhD @ UVA&ensp;</li>
+			<li><a href="https://www.linkedin.com/in/bulbul-ahmed-9261188a/">Bulbul Ahmed</a>, M.Sc., 2019&ensp;=>&ensp;PhD @ UFlorida&ensp;</li>
+			<li><a href= "https://yongming-qin.github.io">Yongming Qin</a>&ensp; => PhD @ UVA&ensp;</li>
+			<li><a href="https://www.linkedin.com/in/sile-shu-47758816b/">Sile Shu</a>, M.Sc., 2019&ensp;=>&ensp;Amazon&ensp;</li>
 			</ul>
 			<br>
 			</td>
@@ -108,6 +108,8 @@
 			<td></td>
 			<td>
 			<ul>
+			<li>Saahith Janapati</li>
+			<li>Shrisha Yapalparvi</li>
 			<li>Chloe Smith&ensp;=>&ensp;Elder Research&ensp;</li>
 			<li>Maxfield Kouzel</i>
 			<li>Casey Ladd</i>
@@ -144,7 +146,7 @@
 		</table>		
 		</td>
 		
-		<td width="58%" align="left">
+		<td width="48%" align="left">
 		<table border="0" cellspacing="0" cellpadding="5">
 		<tbody>
 		<tr valign="top">
