--- a/students.html
+++ b/students.html
@@ -150,31 +150,38 @@
 		<table border="0" cellspacing="0" cellpadding="5">
 		<tbody>
 		<tr valign="top">
-			<td width="35%" align="right">
+			<td width="40%" align="right">
 			<img src="./images/UVA-DSA_2019.jpg" alt="[JPG]" width="90%" height="auto%" align="middle" border="0"/><br/> 
 			<!-- <span style="font-size: small;">UVA-DSA Group Lunch - Jan. 2019</span>-->
 			</td>
-			<td width="35%" align="center">
+			<td width="40%" align="center">
 			<img src="./images/TechGirls_2018_2.png" alt="[JPG]" width="100%" height="auto%" align="middle" border="0"/><br/> 
 			<!-- <span style="font-size: small;">TechGirls' Geek Day @ UVA Link Lab, 2018</span>-->
 			</td>
 		</tr>
 		<tr valign="top">
-			<td width="35%" align="right">
+			<td width="40%" align="right">
 			<img src="./images/EOH_2018.jpg" alt="[JPG]" width="90%" height="auto%" border="0" align="middle"><br>
 			<!-- <font size="2">UVA Engineering Open House, 2018</font>-->
 			</td>
-			<td width="35%" align="center">
+			<td width="40%" align="center">
 			<img src="./images/TechGirls_2018_1.jpg" alt="[JPG]" width="100%" height="auto%" align="middle" border="0"/><br/> 
 			<!-- <span style="font-size: small;">TechGirls' Geek Day @ UVA Link Lab, 2018</span>-->
 			</td>
 		</tr>
 		<tr valign="top">
-			<td colspan="2" width="25%" align="right">
-			<img src="./images/UVA-DSA_4_2021.png" alt="[JPG]" width="80%" height="auto%" align="middle" border="0"/><br/> 
-			<!-- <span style="font-size: small;">TechGirls' Geek Day @ UVA Link Lab, 2018</span>-->
+			<td width="40%" align="right">
+			<img src="./images/lunch_2023.jpg" alt="[JPG]" width="90%" height="auto%" border="0" align="middle"><br>
+			</td>
+			<td width="40%" align="center">
+			<img src="./images/lunch_2024.jpg" alt="[JPG]" width="95%" height="auto%" align="middle" border="0"/><br/> 
 			</td>
 		</tr>
+		<!--<tr valign="top">
+			<td colspan="2" width="25%" align="right">
+			<img src="./images/UVA-DSA_4_2021.png" alt="[JPG]" width="80%" height="auto%" align="middle" border="0"/><br/> 
+			</td>
+		</tr>-->
 		</tbody>
 		</table>
 		</td>
