--- a/students.html
+++ b/students.html
@@ -87,14 +87,14 @@
 			<td></td>
 			<td>
 			<ul>
-			<li><a href="https://xugui-zhou.github.io/">Xugui Zhou</a>, Ph.D., 2024 =>&ensp;Assist. Prof. @ Louisiana State University&ensp;</li>	
-			<li><a href = "https://www.linkedin.com/in/maryam-bagheri-15623450/">Maryam Bagheri</a>, Postdoc, 2024 =>&ensp;Samsung Semiconductor&ensp;</li>
+			<li><a href="https://xugui-zhou.github.io/">Xugui Zhou</a>, Ph.D., 2024 <b><b>&#8594;</b></b> Assist. Prof. @ Louisiana State University&ensp;</li>	
+			<li><a href = "https://www.linkedin.com/in/maryam-bagheri-15623450/">Maryam Bagheri</a>, Postdoc, 2024 <b>&#8594;</b> Samsung Semiconductor&ensp;</li>
 			<li><a href="https://kch4fk.github.io">Kay Hutchinson</a>, Ph.D., 2023</li>
-			<li><a href="https://www.linkedin.com/in/mustafa-hotaki/">Mustafa Hotaki</a>, M.Sc., 2020 =>&ensp;Counterpoint Consulting&ensp;</li>
-			<li><a href="https://www.linkedin.com/in/yasarsamin/">Mohammad Samin Yasar</a>&ensp; => PhD @ UVA&ensp;</li>
-			<li><a href="https://www.linkedin.com/in/bulbul-ahmed-9261188a/">Bulbul Ahmed</a>, M.Sc., 2019&ensp;=>&ensp;PhD @ UFlorida&ensp;</li>
-			<li><a href= "https://yongming-qin.github.io">Yongming Qin</a>&ensp; => PhD @ UVA&ensp;</li>
-			<li><a href="https://www.linkedin.com/in/sile-shu-47758816b/">Sile Shu</a>, M.Sc., 2019&ensp;=>&ensp;Amazon&ensp;</li>
+			<li><a href="https://www.linkedin.com/in/mustafa-hotaki/">Mustafa Hotaki</a>, M.Sc., 2020 <b>&#8594;</b> Counterpoint Consulting&ensp;</li>
+			<li><a href="https://www.linkedin.com/in/yasarsamin/">Mohammad Samin Yasar</a> <b>&#8594;</b> Ph.D. @ UVA&ensp;</li>
+			<li><a href="https://www.linkedin.com/in/bulbul-ahmed-9261188a/">Bulbul Ahmed</a>, M.Sc., 2019 <b>&#8594;</b> Ph.D. @ UFlorida&ensp;</li>
+			<li><a href= "https://yongming-qin.github.io">Yongming Qin</a> <b>&#8594;</b> Ph.D. @ UVA&ensp;</li>
+			<li><a href="https://www.linkedin.com/in/sile-shu-47758816b/">Sile Shu</a>, M.Sc., 2019 <b>&#8594;</b> Amazon&ensp;</li>
 			</ul>
 			<br>
 			</td>
@@ -110,15 +110,15 @@
 			<ul>
 			<li>Saahith Janapati</li>
 			<li>Shrisha Yapalparvi</li>
-			<li>Chloe Smith&ensp;=>&ensp;Elder Research&ensp;</li>
+			<li>Chloe Smith <b>&#8594;</b> Elder Research&ensp;</li>
 			<li>Maxfield Kouzel</i>
 			<li>Casey Ladd</i>
-			<li>Sneha Iyer&ensp;=>&ensp;MSc @ Cornell&ensp;</i>
-			<li>Haotian Ren&ensp;=>&ensp;Amazon&ensp;</li>
+			<li>Sneha Iyer <b>&#8594;</b> M.Sc. @ Cornell&ensp;</i>
+			<li>Haotian Ren <b>&#8594;</b> Amazon&ensp;</li>
 			<li>Shruti Bala</i>
 			<li>Kathleen Yao</i>
 			<li>Joyce Park</i>
-			<li>Ian Reyes&ensp;=>&ensp;IBM&ensp;</li>
+			<li>Ian Reyes <b>&#8594;</b> IBM&ensp;</li>
 			<li>Aishwarya Gavili</i>
 			<li>Sharon Lu</i>	
 			<li>Rohan Chandra</li>
@@ -126,19 +126,19 @@
 			<li>Sion Kim</li>
 			<li>Devin Gardner</li>
 			<li>Asha Maran</li>
-			<li>Elizabeth Shelton</li>
+			<li>Elizabeth Shelton <b>&#8594;</b> Alarm.com&ensp;</li>
 			<li>Harshneet Bhatia</li> 
 			<li>Erick Tian</li>
 			<li>Michael Tang</li>
 			<li>Gabriel Mallari</li> 
-			<li>Ailec Wu =>&ensp;PhD @ Caltech&ensp;</li>
+			<li>Ailec Wu <b>&#8594;</b> Ph.D. @ Caltech&ensp;</li>
 			<li>Annie Chapman&ensp;</li>
 			<li>Terry Tsai&ensp;</li>
 			<li>JoonHyung Park&ensp;</li>
 			<li>Hojun Jeong&ensp;</li>
 			<li>Haonan (Neal) Chen</li>
 			<li>Elli Veer&ensp;</li>
-			<li>Robert Pierce&ensp;</li>
+			<li>Robert Pierce <b>&#8594;</b> M.Sc. @ UVA</li>
 			</ul>
 			</td>
 		</tr>
