--- a/students.html
+++ b/students.html
@@ -48,7 +48,7 @@
 			<li><a href="https://www.zongyuli.net" >Zongyu (Zoey) Li</a></li>
 			<li><a href="https://hamidrezaro.github.io" >Hamid Roodabeh</a></li>
 			<li><a href="https://keshara2032.github.io" >Keshara Weerasinghe</a></li>
-			<li><a href="" >Zhaomeng Zhang</a></li>			 
+			<li><a href="https://zhaomeng-zhang.github.io" >Zhaomeng Zhang</a></li>			 
 			</ul>
 			<br>
 			</td>
