Update course page

--- a/students.html
+++ b/students.html
@@ -74,7 +74,7 @@
 			<td><ul> 
 			<li>Tessa Heick</li>
 			<li>Abhishek Satpathy</li>
-			<li>Zachary Schrader</li>
+			<li>Grant Xiao</li>
 			</ul>
 			</td>
 		</tr>
@@ -108,6 +108,7 @@
 			<td></td>
 			<td>
 			<ul>
+			<li>Zachary Schrader</li>
 			<li>Saahith Janapati</li>
 			<li>Shrisha Yapalparvi</li>
 			<li>Chloe Smith <b>&#8594;</b> Elder Research&ensp;</li>
