--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ECE/CS 4434/6434 - Fall 2023</title>
+<title>ECE/CS 4434/6434 - Fall 2024</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link rel="icon" type="image/ico" href="images/favico.ico">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
@@ -21,7 +21,7 @@
 	<p align="center" style="font-size:22px">
 	   <b>
 	   ECE/CS 4434/6434<br>
-	   Fall 2023 <br>
+	   Fall 2024 <br>
 	   </b>
 	</p>
 	<p align="center" style="font-size:20px" >
@@ -56,16 +56,16 @@
 		</ul>
 		<br>
 	</p>
-	<p><strong>Time: </strong>Mon/Wed 2:00 - 3:15pm<br> 
-	<strong>Location: </strong>Rice Hall 340<br><br>
+	<p><strong>Time: </strong>Mon/Wed 9:30 - 10:45am<br> 
+	<strong>Location: </strong>Thornton Hall D115<br><br>
 
 	<strong>Instructor: </strong> Homa Alemzadeh, ha4d@virginia.edu - Office: 259 Olsson Hall (Link Lab)<br>
-	<strong>Teaching Assistants: </strong> Xugui Zhou and Zongyu Li <br><br>
+	<strong>Teaching Assistants: </strong> Seyed Hamid Reza Roodabeh <br><br>
 		
-	<strong>Instructor Office Hours: </strong>Mon/Wed 3:30 - 4:00pm or by appointment<br>
-	<strong>TA Office Hours: </strong>Thr 3:30-4:30pm or by appointment<br><br>	
-	<strong><a href="https://canvas.its.virginia.edu/courses/78122/pages/home" target="_blank">UVA Canvas Site</a></strong> (For lecture notes, homework submission, grading)<br>
-	<strong><a href="https://piazza.com/virginia/fall2023/ececs44346434/home" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
+	<strong>Instructor Office Hours: </strong>TBD or by appointment<br>
+	<strong>TA Office Hours: </strong>TBD or by appointment<br><br>	
+	<strong><a href="https://canvas.its.virginia.edu/courses/116000" target="_blank">UVA Canvas Site</a></strong> (For lecture notes, homework submission, grading)<br>
+	<strong><a href="https://piazza.com/virginia/fall2024/ececs44346434/home" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
 
 	<p align="justify"><br><strong>Pre-requisites: </strong>This course is intended for graduate and senior-level undergraduate students. A basic knowledge of probability and computer architecture is required. A working knowledge of programming is required for homework and final project.</br>
 	<!--<strong>Undergraduate requirements:</strong> APMA 3100 or APMA 3110 - CS 3330 or ECE 4435 (co-req) - ECE 3430 (preferred)</p>
