--- a/teaching/ece_6434/presentations.html
+++ b/teaching/ece_6434/presentations.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ECE/CS 4434/6434 - Spring 2022</title>
+<title>ECE/CS 4434/6434 - Fall 2024</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
 <link rel="icon" type="image/ico" href="images/favico.ico">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
