Adding office hours and presentations

--- a/teaching/ece_6434/index.html
+++ b/teaching/ece_6434/index.html
@@ -56,13 +56,13 @@
 		</ul>
 		<br>
 	</p>
-	<p><strong>Time: </strong>Mon/Wed 9:30 - 10:45am<br> 
+	<p><strong>Time: </strong>Mon/Wed 9:30 - 10:45 AM<br> 
 	<strong>Location: </strong>Thornton Hall D115<br><br>
 
 	<strong>Instructor: </strong> Homa Alemzadeh, ha4d@virginia.edu - Office: 259 Olsson Hall (Link Lab)<br>
 	<strong>Teaching Assistants: </strong> Seyed Hamid Reza Roodabeh <br><br>
 		
-	<strong>Instructor Office Hours: </strong>TBD or by appointment<br>
+	<strong>Instructor Office Hours: </strong>Mon/Wed 12:00-12:30 PM or by appointment<br>
 	<strong>TA Office Hours: </strong>TBD or by appointment<br><br>	
 	<strong><a href="https://canvas.its.virginia.edu/courses/116000" target="_blank">UVA Canvas Site</a></strong> (For lecture notes, homework submission, grading)<br>
 	<strong><a href="https://piazza.com/virginia/fall2024/ececs44346434/home" target="_blank">Piazza</a></strong> (For questions, discussions, and polls)</p>	
