--- a/news.html
+++ b/news.html
@@ -21,7 +21,32 @@
 	<div id="content_p">
 		<font size="2.5">
 		<table border="0" cellpadding="5" cellspacing="0" class="smallfix">
-		<tbody>										
+		<tbody>	
+		
+			
+
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
+			<td>09/2024</td>
+			<td width="5"></td>
+			<td>
+			We were awarded a grant from the Central Virginia Node (CVN) of the <a href="https://cyberinitiative.org" target="_blank">Commonwealth Cyber Initiative (CCI)</a> 
+			on <b>"Securing Highly Integrated AI-Assisted Emergency Medical Services for Smart Cities"</b></a>. 
+			Co-PI: Carl Elks (VCU).
+			</td>	
+			</tr>
+					
+			
+			<tr valign="top"><td colspan="2"></td></tr>
+			<tr valign="top">
+			<td>07/2024</td>
+			<td width="5"></td>
+			<td>
+			We were awarded a collaborative research grant from the <b>National Science Foundation (NSF)</b> on <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2402941&HistoricalAwards=false" target="_blank">End-to-End Resilience in Autonomous Driving Systems: Strategic Vulnerability Assessment and Mitigation</a> </a>.
+			Co-PIs: Lishan Yang (GMU), Evgenia Smirni (W&M).
+			</td>	
+			</tr>
+												
 			<tr valign="top"><td colspan="2"></td></tr>
 			<tr valign="top">
 			<td>09/2022</td>
@@ -82,7 +107,7 @@
 			<td width="5"></td>
 			<td>
 			We were awarded a grant from <a href="https://cyberinitiative.org" target="_blank">Commonwealth Cyber Initiative (CCI)</a> on "Trustworthiness in Autonomous Vehicles"</a>.
-			Co-PI: Evgenia Smirni.
+			Co-PI: Evgenia Smirni (W&M).
 			</td>	
 			</tr>
 			
