--- a/pub.html
+++ b/pub.html
@@ -23,8 +23,36 @@
 		<table border="0" cellpadding="5" cellspacing="0">
 		<tbody>
 
-
-
+		    <tr valign="top">
+			<td>
+			<a href="https://arxiv.org/pdf/2310.07059"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>(Acceptance Rate ~ 23.75%)
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“DKEC: Domain Knowledge Enhanced Multi-Label Classification for Diagnosis Prediction” </font></b></b><br>
+			X. Ge, S. Abhishek, R. D. Williams, J. A. Stankovic, <u>H. Alemzadeh</u><br>
+			To appear in the <i>2024 Conference on Empirical Methods in Natural Language Processing (EMNLP)</i>, 2024. <b></b> <br>   	
+			</p>
+			</td>
+		    </tr>
+		    
+		    <tr valign="top">
+			<td>
+			<a href="https://www.dropbox.com/scl/fi/x2wbf2fn2yo9qp8reosy2/HealthSec24_SAM_Mohammadreza.pdf?rlkey=v2l25kiqimuv6whgoeau0ya87&e=1&st=lp228vq6&dl=0"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
+			<!--<a href="./slides/NA.pdf"><img src="./images/icons/ppt.png" alt="[PPT]" width="21" height="21" border="1" align="top"></a>(Acceptance Rate ~ 23.75%)
+			   -->
+			</td>
+			<td>
+			<p align="left">
+			<b><font color=#000000>“SAM: Foreseeing Inference-Time False Data Injection Attacks on ML-enabled Medical Devices” </font></b></b><br>
+			M. Hallajiyan, A. P. Dharmalingam, G. Mitra, <u>H. Alemzadeh</u>, S. Iqbal, and K. Pattabiraman<br>
+			To appear in the <i>Workshop on Cybersecurity in HealthCare (HealthSec), Co-held with ACM CCS’24</i>, 2024. <b></b> <br>   	
+			</p>
+			</td>
+		    </tr>
+		    
 		    <tr valign="top">
 			<td>
 			<a href="./papers/SafeComp_2024.pdf"><img src="./images/icons/pdf_gif.gif" alt="[PDF]" width="19" height="18" border="1" align="top"></a><br>
@@ -50,7 +78,7 @@
 			<p align="left">
 			<b><font color=#000000>“Multimodal Transformers for Real-Time Surgical Activity Prediction” </font></b></b><br>
 			K. Weerasinghe, S. H. Roodabeh, K. Hutchinson, <u>H. Alemzadeh</u><br>
-			To appear in the <i>2024 IEEE International Conference on Robotics and Automation (ICRA)</i>, 2024. <b>(Acceptance Rate ~ 44.83%)</b> <br>   	
+			In the <i>2024 IEEE International Conference on Robotics and Automation (ICRA)</i>, 2024. <b>(Acceptance Rate ~ 44.83%)</b> <br>   	
 			</p>
 			</td>
 		    </tr>
@@ -65,7 +93,7 @@
 			<p align="left">
 			<b><font color=#000000>“Real-Time Multimodal Cognitive Assistant for Emergency Medical  Services” </font></b></b><br>
 			K. Weerasinghe, S. Janapati, X. Ge, S. Kim, S. Iyer, J. Stankovic, <u>H. Alemzadeh</u><br>
-			To appear in the <i>9th ACM/IEEE Conference on Internet of Things Design and Implementation (IoTDI)</i>, 2024.</b> <br>   	
+			In the <i>9th ACM/IEEE Conference on Internet of Things Design and Implementation (IoTDI)</i>, 2024.</b> <br>   	
 			</p>
 			</td>
 		    </tr>
